<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01Var03</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="riddle">riddle</string>
    <string name="answer">answer</string>
    <string name="play">Play</string>
    <string name="title_activity_practical_test01_var02_play">PracticalTest01Var02PlayActivity</string>
	<string name="answer_play">Ans</string>
	<string name="riddle_play">Rid</string>
    <string name="check">Check</string>
    <string name="back">Back</string>
</resources>
